--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+}
+
 #footerCont p {
   margin: 0;
   margin-left: 1rem;
@@ -5,9 +15,23 @@
 }
 
 #alertCont {
-  height: calc(100vh - 56px - 56px);
+  min-height: calc(100vh - 56px - 56px);
+}
+
+#cardCont {
+  min-height: 650px;
 }
 
 #cardImage {
   width: 100%;
+  /* max-height: 370px; */
+  object-fit: cover;
+}
+
+#addBtn {
+  font-size: 13px;
+  padding: 0.3rem;
+}
+.genreBtn {
+  margin-inline: 1rem;
 }
